--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "0.0.0",
   "description": "A collection of utilities to parse changelogs and build release notes",
   "main": "out/src/index.js",
-  "files": ["out/src"],
+  "files": [
+    "out/src"
+  ],
   "scripts": {
     "build": "npm run tsc && npm test && npm run lint",
     "tsc": "tsc",
@@ -12,6 +14,7 @@
   },
   "devDependencies": {
     "@types/chai": "^4.3.5",
+    "@types/changelog-parser": "^2.8.1",
     "@types/mocha": "^10.0.1",
     "chai": "^4.3.8",
     "eslint": "^8.48.0",
@@ -21,5 +24,8 @@
     "typescript": "^5.2.0"
   },
   "author": "Hendri Pretorius",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "changelog-parser": "^3.0.1"
+  }
 }
