--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/chai": "^4.3.5",
     "@types/changelog-parser": "^2.8.1",
     "@types/mocha": "^10.0.1",
+    "@types/node": "^20.5.9",
     "chai": "^4.3.8",
     "eslint": "^8.48.0",
     "eslint-config-airbnb-base": "^15.0.0",
