use commander to parse cli arguments
add `commander` dependency. use that to parse the cli arguments, instead
of using `process.argv` directly

currently only the format command (as before) and use that as default.
this allows formatting with just the file name, or with `format
filename` and will allow easier adding more subcommands in the future

--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   "license": "MIT",
   "dependencies": {
     "changelog-parser": "^3.0.1",
+    "commander": "^11.1.0",
     "semver": "^7.5.4"
   }
 }
