tests: change cli test to tap output, use prove in CI
change output of `tests/cli.sh` to match TAP, and use `prove` in CI to
run and show the results

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,4 +24,4 @@ jobs:
     - run: npm test
     - run: npm run lint
     - name: test cli
-      run: ./tests/cli.sh
+      run: prove --directives --failures ./tests/cli.sh
